<resources>
    <string name="app_name">BYSJ1.0.2</string>
    <string name="foo">hello world</string>
    <string name="username_hint">请输入账号</string>
    <string name="psd_hint">请输入密码</string>
    <string name="button_msg">登        录</string>
    <string name="banben">1.0.0</string>
    <string name="icon_msg">图标</string>
    <string name="title_activity_login">Sign in</string>

    <string name="psd_again_hint">请再次输入密码</string>
    <string name="button_reg">注        册</string>
    <string name="first_fragment">首页</string>
    <string name="second_fragment">私信</string>
    <string name="third_fragment">团友圈</string>
    <string name="fourth_fragment">我</string>
    <string name="create_btn">创建团队</string>
    <string name="join_btn">加入团队</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_zhuce">注册</string>
    <string name="btn_submit">提        交</string>


    <string name="action_settings">Settings</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
</resources>
